changed search engine settings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Twitter Card Data -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="iammikejoyce">
+  <meta name="twitter:creator" content="theyashbhutoria">
   <meta name="twitter:title" content="">
   <meta name="twitter:description" content="">
   <meta name="twitter:url" content="">
