added about section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
 					</header>
 					<!-- /Header -->
 
+					<!-- About -->
+					<div class="about wrapper">
+						<div class="row">
+							<div class="small-12 medium-12 large-10 large-centered column">
+								<section>
+									<div id="about">
+
+									</div>
+								</section>
+							</div>
+						</div>
+					</div>
+					<!-- About -->
+
 					<!-- Work Experience -->
 					<div class="work wrapper">
 						<div class="row">
