added meta for gsuit

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	<meta property="og:image" content="" />
 	<meta property="og:description" content="" />
 
+	<meta name="google-site-verification" content="MVwvPQakUxcVkbBuUPc9KM759jrFulbIeQAzN9PGI0M" />
+
 	<!-- Fonts -->
 	<link href='//fonts.googleapis.com/css?family=Roboto:400,300,500,700,900|Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
 
