--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 	<meta name="twitter:url" content="">
 	<meta name="twitter:image" content="">
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136770835-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-136770835-1');
+	</script>	
+	
 	<!-- Facebook Open Graph Data -->
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:title" content="" />
