--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             border: 3px solid #00ff00;
             box-shadow: 0 0 30px rgba(0, 255, 0, 0.5);
             object-fit: cover;
+            transition: all 0.3s ease;
+        }
+
+        .profile-image:hover {
+            box-shadow: 0 0 50px rgba(0, 255, 0, 0.8), 0 0 100px rgba(0, 255, 0, 0.4);
+            border-color: #00ff00;
+            transform: scale(1.05);
         }
 
         .profile-info h1 {
@@ -114,7 +121,9 @@
         }
 
         .contact-item a:hover {
-            text-shadow: 0 0 5px #00ff00;
+            text-shadow: 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
+            color: #00ff00;
+            transform: scale(1.05);
         }
 
         .section {
@@ -124,6 +133,14 @@
             padding: 25px;
             background: rgba(0, 255, 0, 0.02);
             position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .section:hover {
+            border-color: #00ff00;
+            box-shadow: 0 0 30px rgba(0, 255, 0, 0.4), inset 0 0 10px rgba(0, 255, 0, 0.1);
+            transform: translateY(-2px);
+            background: rgba(0, 255, 0, 0.05);
         }
 
         .section::before {
@@ -225,6 +242,17 @@
             padding: 6px 12px;
             border-radius: 4px;
             font-size: 0.95em;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .skill-tag:hover {
+            background: rgba(0, 255, 0, 0.3);
+            border-color: #00ff00;
+            color: #00ff00;
+            transform: translateY(-2px);
+            box-shadow: 0 0 20px rgba(0, 255, 0, 0.6), 0 4px 8px rgba(0, 255, 0, 0.4);
+            text-shadow: 0 0 10px #00ff00;
         }
 
         .typing-effect {
@@ -251,7 +279,8 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            opacity: 0.03;
+            opacity: 0.15;
+            pointer-events: none;
         }
 
         @media (max-width: 768px) {
@@ -576,14 +605,18 @@
         }
 
         function draw() {
-            ctx.fillStyle = 'rgba(0, 0, 0, 0.04)';
+            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            ctx.fillStyle = '#00ff00';
-            ctx.font = fontSize + 'px arial';
+            ctx.font = fontSize + 'px monospace';
 
             for(let i = 0; i < drops.length; i++) {
                 const text = matrixArray[Math.floor(Math.random() * matrixArray.length)];
+                
+                // Create fading effect from bright to dim
+                const opacity = (canvas.height - drops[i] * fontSize) / canvas.height;
+                ctx.fillStyle = `rgba(0, 255, 0, ${Math.max(0.1, opacity)})`;
+                
                 ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
                 if(drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
@@ -599,6 +632,12 @@
         window.addEventListener('resize', () => {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
+            // Recalculate columns and drops for new canvas size
+            const newColumns = canvas.width / fontSize;
+            drops.length = 0;
+            for(let x = 0; x < newColumns; x++) {
+                drops[x] = Math.floor(Math.random() * canvas.height / fontSize);
+            }
         });
 
         // Terminal typing effect for the profile name
