Update resume link and enhance technical skills section with detailed categories and projects

--- a/index.html
+++ b/index.html
@@ -353,13 +353,90 @@
                     <div class="contact-item">📱 <a href="tel:+12172000330">+1-217-200-0330</a></div>
                     <div class="contact-item">🔗 <a href="https://linkedin.com/in/yashbhutoria" target="_blank">linkedin.com/in/yashbhutoria</a></div>
                     <div class="contact-item">📍 Dallas, TX</div>
-                    <div class="contact-item">📄 <a href="https://github.com/yashbhutoria/latex-resume/blob/main/resume.pdf" target="_blank">Download Resume PDF</a></div>
+                    <div class="contact-item">📄 <a href="https://raw.githubusercontent.com/yashbhutoria/latex-resume/refs/heads/main/resume.pdf" target="_blank">Download Resume PDF</a></div>
                 </div>
             </div>
         </div>
 
         <div class="section" data-title="PROFESSIONAL_SUMMARY">
             <p>As Assistant Vice President at Celebal Technologies, I architect, develop, and manage robust and scalable enterprise-grade integration solutions on Azure Cloud Platform. I leverage my expertise in Azure PaaS, Data Engineering, and Serverless technologies to deliver value to clients across various domains, such as energy, sustainability, healthcare, and education.</p>
+        </div>
+
+        <div class="section" data-title="TECHNICAL_SKILLS">
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h4>Programming</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">C#</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">Go</span>
+                        <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">PowerShell</span>
+                        <span class="skill-tag">Bash</span>
+                        <span class="skill-tag">Terraform</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h4>Cloud Platforms</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Azure (Expert)</span>
+                        <span class="skill-tag">AWS (Proficient)</span>
+                        <span class="skill-tag">GCP (Proficient)</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h4>Databases</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Azure SQL</span>
+                        <span class="skill-tag">PostgreSQL</span>
+                        <span class="skill-tag">MySQL</span>
+                        <span class="skill-tag">CosmosDB</span>
+                        <span class="skill-tag">Redis</span>
+                        <span class="skill-tag">MongoDB</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h4>DevOps & Tools</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Docker</span>
+                        <span class="skill-tag">Kubernetes</span>
+                        <span class="skill-tag">Git</span>
+                        <span class="skill-tag">Azure DevOps</span>
+                        <span class="skill-tag">Jenkins</span>
+                        <span class="skill-tag">GitHub Actions</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h4>Data & Analytics</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">Apache Kafka</span>
+                        <span class="skill-tag">Airflow</span>
+                        <span class="skill-tag">PySpark</span>
+                        <span class="skill-tag">Databricks</span>
+                        <span class="skill-tag">Power BI</span>
+                        <span class="skill-tag">ETL/ELT</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h4>Frameworks & Architecture</h4>
+                    <div class="skill-tags">
+                        <span class="skill-tag">.NET Core</span>
+                        <span class="skill-tag">FastAPI</span>
+                        <span class="skill-tag">Spring Boot</span>
+                        <span class="skill-tag">React</span>
+                        <span class="skill-tag">Node.js</span>
+                        <span class="skill-tag">Microservices</span>
+                        <span class="skill-tag">Serverless</span>
+                        <span class="skill-tag">RESTful APIs</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="section" data-title="WORK_EXPERIENCE">
@@ -461,79 +538,82 @@
             </div>
         </div>
 
-        <div class="section" data-title="TECHNICAL_SKILLS">
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <h4>Programming</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Python</span>
-                        <span class="skill-tag">C#</span>
-                        <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">Go</span>
-                        <span class="skill-tag">SQL</span>
-                        <span class="skill-tag">PowerShell</span>
-                        <span class="skill-tag">Bash</span>
-                        <span class="skill-tag">Terraform</span>
+        <div class="section" data-title="PROJECTS">
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">Integration Modernization (Snacks Manufacturer)</div>
+                        <div class="company">Lead Delivery Manager & Architect</div>
                     </div>
+                    <div class="dates">09/2023 - Present</div>
                 </div>
-
-                <div class="skill-category">
-                    <h4>Cloud Platforms</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Azure (Expert)</span>
-                        <span class="skill-tag">AWS (Proficient)</span>
-                        <span class="skill-tag">GCP (Proficient)</span>
-                    </div>
+                <div class="description">
+                    Established new and improved IT processes, standards and framework to streamline the operational efficiency of the customer. Leading delivery across 5+ concurrent projects with comprehensive architectural oversight.
                 </div>
+            </div>
 
-                <div class="skill-category">
-                    <h4>Databases</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Azure SQL</span>
-                        <span class="skill-tag">PostgreSQL</span>
-                        <span class="skill-tag">MySQL</span>
-                        <span class="skill-tag">CosmosDB</span>
-                        <span class="skill-tag">Redis</span>
-                        <span class="skill-tag">MongoDB</span>
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">IPaaS on Azure (Hospitality Company, San Diego)</div>
+                        <div class="company">Lead Offshore Developer, Team of 8</div>
                     </div>
+                    <div class="dates">09/2019 - 07/2022</div>
                 </div>
-
-                <div class="skill-category">
-                    <h4>DevOps & Tools</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">Kubernetes</span>
-                        <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Azure DevOps</span>
-                        <span class="skill-tag">Jenkins</span>
-                        <span class="skill-tag">GitHub Actions</span>
-                    </div>
+                <div class="description">
+                    Designed and developed an integration platform on Azure using C# serverless functions, API Gateway, and Cloud workflows. Implemented Infrastructure as Code and CI/CD pipelines for seamless deployment and scalability.
                 </div>
+            </div>
 
-                <div class="skill-category">
-                    <h4>Data & Analytics</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Apache Kafka</span>
-                        <span class="skill-tag">Airflow</span>
-                        <span class="skill-tag">PySpark</span>
-                        <span class="skill-tag">Databricks</span>
-                        <span class="skill-tag">Power BI</span>
-                        <span class="skill-tag">ETL/ELT</span>
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">Data Landscape Modernization (Illinois Motorparts Manufacturer)</div>
+                        <div class="company">Architect and Lead Developer, Team of 6</div>
                     </div>
+                    <div class="dates">04/2021 - 04/2022</div>
                 </div>
+                <div class="description">
+                    Modernized data ingestion landscape by implementing robust data pipelines between SAP S/4 and Salesforce using Azure Data Factory. Streamlined data flow and improved operational efficiency.
+                </div>
+            </div>
 
-                <div class="skill-category">
-                    <h4>Frameworks & Architecture</h4>
-                    <div class="skill-tags">
-                        <span class="skill-tag">.NET Core</span>
-                        <span class="skill-tag">FastAPI</span>
-                        <span class="skill-tag">Spring Boot</span>
-                        <span class="skill-tag">React</span>
-                        <span class="skill-tag">Node.js</span>
-                        <span class="skill-tag">Microservices</span>
-                        <span class="skill-tag">Serverless</span>
-                        <span class="skill-tag">RESTful APIs</span>
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">Data Landscape Modernization (Medical Imaging Device Manufacturer)</div>
+                        <div class="company">Architect and Lead Developer, Team of 6</div>
                     </div>
+                    <div class="dates">10/2020 - 05/2022</div>
+                </div>
+                <div class="description">
+                    Modernized customer's data landscape by migrating to Azure SQL Database with serverless architecture. Implemented comprehensive DevOps practices using Azure DevOps for enhanced reliability and scalability.
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">Data Integration on Dell Boomi (Global Sports Brand)</div>
+                        <div class="company">Lead Offshore Developer, Team of 4</div>
+                    </div>
+                    <div class="dates">05/2020 - 08/2020</div>
+                </div>
+                <div class="description">
+                    Developed comprehensive integrations connecting 10+ systems using Dell Boomi platform. Ensured seamless data flow across diverse enterprise systems for improved operational visibility.
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-header">
+                    <div>
+                        <div class="project-title">Learning and Development Reporting (Indian Telecom Company)</div>
+                        <div class="company">Lead Developer, Team of 2</div>
+                    </div>
+                    <div class="dates">04/2019 - 04/2020</div>
+                </div>
+                <div class="description">
+                    Delivered comprehensive Power BI dashboard showcasing learning and development progress. Utilized Azure SQL Database, custom APIs, and Selenium for automated data collection and visualization.
                 </div>
             </div>
         </div>
@@ -560,14 +640,6 @@
                     </div>
                     <div class="dates">07/2015 - 05/2019</div>
                 </div>
-            </div>
-        </div>
-
-        <div class="section" data-title="CERTIFICATIONS">
-            <div class="skill-tags">
-                <span class="skill-tag">Azure Fundamentals (AZ-900)</span>
-                <span class="skill-tag">Azure Developer Associate (AZ-204)</span>
-                <span class="skill-tag">Azure Data Fundamentals (DP-900)</span>
             </div>
         </div>
 
